C#/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_AddItemImageEx(int hAdapter, int iGroup, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_SetText(int hAdapter, int iGroup, int iItem, int iColumn, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_SetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_SetTextEx(int hAdapter, int iGroup, int iItem, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_SetImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_SetImage(int hAdapter, int iGroup, int iItem, int iColumn, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_SetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_SetImageEx(int hAdapter, int iGroup, int iItem, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Group_DeleteItem(int hAdapter, int iGroup);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_DeleteAllChildItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_Group_DeleteAllChildItem(int hAdapter, int iGroup);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_DeleteItem(int hAdapter, int iGroup, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_DeleteAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_DeleteAll(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_DeleteAllGroup", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_DeleteAllGroup(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_DeleteAllItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_DeleteAllItem(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_DeleteColumnGroup", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_DeleteColumnGroup(int hAdapter, int iColumn);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_DeleteColumnItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterListView_DeleteColumnItem(int hAdapter, int iColumn);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_GetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Item_GetTextEx(int hAdapter, int iGroup, int iItem, string pName, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_GetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_GetImageEx(int hAdapter, int iGroup, int iItem, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_Create();

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_AddColumn(int hAdapter, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_SetColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_SetColumn(int hAdapter, string pColName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_AddItemText(int hAdapter, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_AddItemTextEx(int hAdapter, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_AddItemImage(int hAdapter, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_AddItemImageEx(int hAdapter, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_InsertItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_InsertItemText(int hAdapter, int iItem, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_InsertItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_InsertItemTextEx(int hAdapter, int iItem, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_InsertItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_InsertItemImage(int hAdapter, int iItem, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_InsertItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_InsertItemImageEx(int hAdapter, int iItem, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_SetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_SetItemText(int hAdapter, int iItem, int iColumn, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_SetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_SetItemTextEx(int hAdapter, int iItem, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_SetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_SetItemImage(int hAdapter, int iItem, int iColumn, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_SetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_SetItemImageEx(int hAdapter, int iItem, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_DeleteItem(int hAdapter, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_DeleteItemEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_DeleteItemEx(int hAdapter, int iItem, int nCount);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_DeleteItemAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterTable_DeleteItemAll(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_DeleteColumnAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapterTable_DeleteColumnAll(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_GetCount(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetCountColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_GetCountColumn(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_GetItemText(int hAdapter, int iItem, int iColumn, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_GetItemImage(int hAdapter, int iItem, int iColumn);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterTable_GetItemTextEx(int hAdapter, int iItem, string pName, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTable_GetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTable_GetItemImageEx(int hAdapter, int iItem, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTree_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTree_Create();

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTree_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTree_AddColumn(int hAdapter, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTree_SetColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTree_SetColumn(int hAdapter, string pColName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTree_InsertItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTree_InsertItemText(int hAdapter, string pValue, int nParentID, int insertID);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterTree_InsertItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterTree_InsertItemTextEx(int hAdapter, string pName, string pValue, int nParentID, int insertID);
